# pyparticle

./: .testmondata  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
pyparticle/sql/: __init__.py  dataframe.py  types.py
tests/pyparticle/sql/dataframe/: test_select.py
tests/pyparticle/sql/types/: test_row_column_access.py  test_row_eq.py
