[tool.poetry]
name = "pyparticle"
version = "0.1.0"
description = "A drop-in replacement for pyspark that runs much faster for unit testing, and small data"
authors = ["Mário Feroldi <mferoldif@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
hypothesis = "^6.54.3"
pytest-icdiff = "^0.6"
pytest-testmon = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
